PRESIDECMS-1401 wrap the asset name to avoid layout break

--- a/system/assets/css/admin/specific/assetmanager/index/listingTable.less
+++ b/system/assets/css/admin/specific/assetmanager/index/listingTable.less
@@ -21,15 +21,26 @@
 						display          : inline-block;
 					}
 
+					.asset-title {
+						display: inline-block;
+						width  : 80%;
+					}
+
 					.asset-preview {
 						width   : 60px;
 						display : inline-block;
+						float   : left;
 
 						img {
 							max-width  : 48px;
 							max-height : 32px;
 						}
 					}
+				}
+
+				.asset-name {
+					word-wrap: break-word;
+					max-width: 250px;
 				}
 
 				&:first-child td {
